--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@
 bin/
 .idea/
 .settings/
-src/contests
-src/a2ojladder
+src/contests/
+src/a2ojladder/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
